feat: 건의하기 개발

--- a/src/main/resources/templates/receipt.html
+++ b/src/main/resources/templates/receipt.html
@@ -104,6 +104,7 @@
                                                 <h2 th:text="${title}"></h2>
                                             </div>
                                             <span id="type" th:text="${type}" hidden="hidden"></span>
+                                            <span id="sheetName" th:text="${sheetName}" hidden="hidden"></span>
                                             <!-- 기본 정보 -->
                                             <div class="mb-2" th:if="${receiptId}">접수번호: <span id="receiptId" th:text="${receiptId}"></span></div>
                                             <div class="mb-2" th:if="${brandName}">브랜드: <span id="brandName" th:text="${brandName}"></span></div>
