--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <nav th:fragment="header" class="sb-topnav navbar navbar-expand navbar-light  bg-light">
     <!-- Navbar Brand-->
     <a class="navbar-brand " href="/reservation/roomTour/index">
-        <div style="text-align: center">꼬모쉐</div>
+        <div style="text-align: center">연세이약국</div>
 <!--        <img src="/logo.png" class="img-fluid" style="height: 57.5px; margin: 0; padding: 0;">-->
     </a>
     <!-- Sidebar Toggle-->
